samples/_failures_safe/1761083022_18fb4c_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d1c5dd73.c: In function ‘parser_parse_expression’:
./samples/SAFE/__tmp_d1c5dd73.c:155:9: error: expected declaration or statement at end of input
  155 |         int right = parser_parse_term(parser);
      |         ^~~
./samples/SAFE/__tmp_d1c5dd73.c:155:9: error: expected declaration or statement at end of input
